--- a/themes/custom/bodigiti/bodigiti.libraries.yml
+++ b/themes/custom/bodigiti/bodigiti.libraries.yml
@@ -9,6 +9,7 @@ global-styling:
   js:
     js/modal.js: {}
     js/google-maps.js: {}
+    js/accessibility.js: {}
       # Disabled because it broke ability of anchor links to show in browser url
     #    js/smooth-scroll.js: {}
 
