Accessibility: rename 'accessibility.js' to 'contact-forms.js', add comments indicating this is for accessibility so form elements are not dupicated.  Truck-Filter.js: Add jquery to remove content/top form's elements at window size of min-width 1000px, also remove one form element from sidebar form regardless of screens width.

--- a/themes/custom/bodigiti/bodigiti.libraries.yml
+++ b/themes/custom/bodigiti/bodigiti.libraries.yml
@@ -9,7 +9,7 @@ global-styling:
   js:
     js/modal.js: {}
     js/google-maps.js: {}
-    js/accessibility.js: {}
+    js/contact-forms.js: {}
       # Disabled because it broke ability of anchor links to show in browser url
     #    js/smooth-scroll.js: {}
 
